# mvp-icap-service

./: Dockerfile  README.md
.github/workflows/: build-and-release.yml  cd.yaml  ci.yaml  sonar-cloud-c.yaml  sonar_cloudCmodules.yaml  sonar_cloudcsharp.yaml
c-icap/: README  c-icap.conf.in  configure.ac  info.c  request.c  util.c
c-icap-modules/: README  configure.ac  sonar-project.properties.
c-icap-modules/services/gw_rebuild/: Makefile.am  gw_env_var.c  gw_env_var.h  gw_guid.c  gw_guid.h  gw_rebuild.c  gw_rebuild.conf  gw_rebuild.h
c-icap-modules/services/gw_rebuild/templates/en/: POLICY_ISSUE
c-icap/include/: util.h
c-icap/modules/: dnsbl_tables.c
cloud-proxy-app/: CloudProxyApplication.cs  Program.cs  cloud-proxy-app.csproj  cloud-proxy-app.sln
cloud-proxy-app/Configuration/: IAppConfigurationChecker.cs
cloud-proxy-app/source/: CloudProxyApplication.cs  CommandLineSwitchMapping.cs  NativeProxyApplication.cs  Program.cs  ReturnOutcome.cs  cloud-proxy-app.csproj
cloud-proxy-app/source/AdaptationService/: AdaptationOutcome.cs  AdaptationOutcomeProcessor.cs  AdaptationServiceClientException.cs  IAdaptationServiceClient.cs  RabbitMqClient.cs
cloud-proxy-app/source/Configuration/: CloudProxyApplicationConfiguration.cs  CloudProxyApplicationConfigurationChecker.cs  CloudProxyCloudConfiguration.cs  CloudProxyCloudConfigurationChecker.cs  IAppConfiguration.cs  ICloudConfiguration.cs  (+4 more)
cloud-proxy-app/test/: cloud-proxy-app.test.csproj
infrastructure/: README.md  mvp-icap-service-configmap.yml  mvp-icap-service-deployment.yml
opt/: start.sh
(+16 files in other folders)
